src/global/core-modules/legacy-data-mgmt/objects/LegacyDataEntry__c/LegacyDataEntry__c.object-meta.xml
<CustomObject>
    <description>Object to store legacy data coming from other systems. Records will be attached to single records: Accounts, Contacts, Leads, Appointments, etc.</description>
    <label>Legacy Data Entry</label>
    <nameField>
        <displayFormat>LDE-{0000}</displayFormat>
        <label>Legacy Data Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Data Entries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>