src/global/core-modules/legacy-data-mgmt/objects/LegacyDataEntry__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>