src/global/core-modules/legacy-data-mgmt/objects/LegacyDataEntry__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>