src/global/core-modules/legacy-data-mgmt/objects/LegacyDataEntry__c/fields/SourceEntityId__c.field-meta.xml
<CustomField>
    <fullName>SourceEntityId__c</fullName>
    <description>Stores the ID of the source object related to the request.</description>
    <externalId>true</externalId>
    <label>Source Entity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>